Ingreso de variables CSS

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+:root {
+    --color-primario: #18230F;
+    --color-secundario:#CAE0BC;
+    --color-terciario: #255F38;
+    --color-hover: #1F7D53;
+
+    --fuente-montserrat: 'Montserrat', sans serif;
+    --fuente-krona: 'Krona One', sans serif;
+}
+
 * {
     padding:0;
     margin:0;
@@ -6,8 +16,8 @@
 
 
 body {
-    background-color: #000000;
-    color: #F6F6F6;
+    background-color: var(--color-primario);
+    color: var(--color-secundario);
     box-sizing: border-box;
 }
 .header {
@@ -20,10 +30,10 @@ body {
     gap:80px;
 }
 .header__menu__link {
-    font-family: "Montserrat", sans-serif;
+    font-family: var(--fuente-montserrat);
     font-size:24px;
     font-weight: 600;
-    color: #22D4FD;
+    color: var(--color-terciario);
     text-decoration: none;
 }
 .presentacion {
@@ -40,14 +50,14 @@ body {
 }
 .presentacion__contenido__titulo {
    font-size: 36px;
-   font-family: "Krona One", sans-serif;   
+   font-family: var(--fuente-krona);   
 }
 .titulo-destaque {
-    color: #22D4FD
+    color: var(--color-terciario);
 }
 .presentacion__contenido__texto {
     font-size:24px;
-    font-family: "Montserrat", sans-serif;
+    font-family: var(--fuente-montserrat);
 }
 .presentacion__enlaces{
     display:flex;
@@ -61,32 +71,32 @@ body {
     text-align: center;
     padding: 21.5px 0;
     border-radius: 8px;
-    font-family: "Montserrat", sans-serif;
+    font-family: var(--fuente-montserrat);
     font-size: 24px;
     font-weight: 600;
     text-decoration: none;
     color: #F6F6F6;
-    border: 2px solid #22D4FD;
+    border: 2px solid var(--color-terciario);
     display: flex;
     justify-content:center;
     gap: 10px;
 }
 .presentacion__enlaces_subtitulos{
-    font-family: "Krona One", sans-serif;
+    font-family: var(--fuente-krona);
     font-size: 24px;
     font-weight: 400;
 
 }
 .presentacion__enlaces__link:hover{
-    background-color: #272727;
+    background-color: var(--color-hover);
 }
 
 .footer {
-    background-color: #22D4FD;
+    background-color: var(--color-terciario);
     padding: 24px;
-    color: #000000;
+    color: var(--color-secundario);
     text-align: center;
-    font-family: "Montserrat", sans-serif;
+    font-family: var(--fuente-montserrat);
     font-size:24px;
     font-weight: 400;
 }
