--- a/styles/style.css
+++ b/styles/style.css
@@ -68,19 +68,19 @@ body {
     gap:32px;
 }
 .presentacion__enlaces__link{
-    width: 50px;
+    width: 50%;
     text-align: center;
-    padding: 21.5px 0;
+    padding:21.5px 0;
     border-radius: 8px;
     font-family: var(--fuente-montserrat);
     font-size: 1.5rem;
     font-weight: 600;
     text-decoration: none;
-    color: #F6F6F6;
+    color: var(--color-secundario);
     border: 2px solid var(--color-terciario);
     display: flex;
     justify-content:center;
-    gap: 10px;
+    gap: 16px;
 }
 .presentacion__enlaces_subtitulos{
     font-family: var(--fuente-krona);
@@ -102,4 +102,15 @@ body {
     font-family: var(--fuente-montserrat);
     font-size:1.5rem;
     font-weight: 400;
+}
+@media(max-width:1200px){
+    .header{
+        padding:10%;
+    }
+    .header__menu{
+        justify-content: center;
+    }
+    .presentacion{
+        flex-direction: column-reverse;
+    }
 }
