Haciendo el prroyecto mas responsive

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@ body {
 .presentacion {
     display:flex;
     align-items:center;
-    padding: 6% 15%;
+    padding: 5% 15%;
     justify-content: space-between;
     gap: 82px;
 }
@@ -112,5 +112,6 @@ body {
     }
     .presentacion{
         flex-direction: column-reverse;
+        padding: 5%;
     }
 }
